--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Calendar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="500" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
+        Title="Calendar" Height="500" Width="500" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
 
     <Viewbox>
 
